// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly if option rating is not selected 1`] = `
<div
  className="inline"
>
  <button
    className="sort-button-deselected"
    onClick={[Function]}
  >
    rating
  </button>
</div>
`;

exports[`renders correctly if option rating is selected 1`] = `
<div
  className="inline"
>
  <button
    className="sort-button-selected"
    onClick={[Function]}
  >
    rating
  </button>
</div>
`;

exports[`renders correctly if option release date is not selected 1`] = `
<div
  className="inline"
>
  <button
    className="sort-button-deselected"
    onClick={[Function]}
  >
    release date
  </button>
</div>
`;

exports[`renders correctly if option release date is selected 1`] = `
<div
  className="inline"
>
  <button
    className="sort-button-selected"
    onClick={[Function]}
  >
    release date
  </button>
</div>
`;
